Enable the "Empty Trash" action if items are deleted by non-KDE apps

To achieve this, the Places Panel context menu now checks the icon of
the "Trash" item (which is updated by a dir lister that watches the
state of the trash), rather then reading a config file which is only
used by KDE applications.

BUG: 293651
FIXED-IN: 4.9.0